fixed asset loading on sub pages

--- a/index.html
+++ b/index.html
@@ -2,141 +2,8 @@
 layout: default
 ---
 
-        <!-- Slider Area Start Here -->
-        <section class="slick-slider-wrap-layout1">
-            <div class="slick-slider-layout1">
-                <div class="slick-carousel slick-content" data-slick='{
-                    "slidesToShow": 1,
-                    "slidesToShowTab": 1,
-                    "slidesToShowMobile": 1,
-                    "slidesToShowMobiles": 1,
-                    "slidesToScroll": 1,
-                    "speed": 1000,
-                    "autoplaySpeed": 2000,
-                    "dots": false,
-                    "arrows": false,
-                    "lazyLoad": "progressive",
-                    "pauseOnHover": true,
-                    "autoplay": true,
-                    "centerMode": true,
-                    "adaptiveHeight": false,
-                    "rtl": false,
-                    "asNavFor": ".slick-nav"
-                    }'>
-                    <div class="slick-slider">
-                        <div class="item-img">
-                            <img src="img/slider/slide1-1.jpg" alt="slide">
-                            <div class="item-content">
-                                <div class="big-text">Roofing Inspection</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="slick-slider">
-                        <div class="item-img">
-                            <img src="img/slider/slide1-2.jpg" alt="slide">
-                            <div class="item-content">
-                                <div class="big-text">Roofing Siding</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="slick-slider">
-                        <div class="item-img">
-                            <img src="img/slider/slide1-3.jpg" alt="slide">
-                            <div class="item-content">
-                                <div class="big-text">Roofing Replacement</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="slick-slider">
-                        <div class="item-img">
-                            <img src="img/slider/slide1-4.jpg" alt="slide">
-                            <div class="item-content">
-                                <div class="big-text">Roofing Insulation</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="slick-slider">
-                        <div class="item-img">
-                            <img src="img/slider/slide1-5.jpg" alt="slide">
-                            <div class="item-content">
-                                <div class="big-text">Roofing Gutters</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="slick-slider">
-                        <div class="item-img">
-                            <img src="img/slider/slide1-6.jpg" alt="slide">
-                            <div class="item-content">
-                                <div class="big-text">Roofing Repair</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="slick-nav-wrap">
-                    <div class="container">
-                        <div class="slick-carousel slick-nav" data-slick='{
-                            "slidesToShow": 6,
-                            "slidesToShowTab": 5,
-                            "slidesToShowMobile": 3,
-                            "slidesToShowMobiles": 2,
-                            "slidesToScroll": 1,
-                            "speed": 1000,
-                            "autoplaySpeed": 2000,
-                            "dots": false,
-                            "arrows": false,
-                            "lazyLoad": "progressive",
-                            "pauseOnHover": true,
-                            "autoplay": true,
-                            "focusOnSelect": true,
-                            "centerMode": false,
-                            "adaptiveHeight": false,
-                            "rtl": false,
-                            "asNavFor": ".slick-content",
-                            "prevArrow": "<span class=\"slick-prev slick-navigation\"><i class=\"flaticon-back\"></i></span>",
-                            "nextArrow": "<span class=\"slick-next slick-navigation\"><i class=\"flaticon-next\"></i></span>"
-                            }'>
-                            <div class="nav-item">
-                                <div class="item-icon">
-                                    <i class="flaticon-roof-4"></i>
-                                </div>
-                                <h4 class="item-title">Inspection</h4>
-                            </div>
-                            <div class="nav-item">
-                                <div class="item-icon">
-                                    <i class="flaticon-roof"></i>
-                                </div>
-                                <h4 class="item-title">Siding</h4>
-                            </div>
-                            <div class="nav-item">
-                                <div class="item-icon">
-                                    <i class="flaticon-roof-1"></i>
-                                </div>
-                                <h4 class="item-title">Replacement</h4>
-                            </div>
-                            <div class="nav-item">
-                                <div class="item-icon">
-                                    <i class="flaticon-roof-3"></i>
-                                </div>
-                                <h4 class="item-title">Insulation</h4>
-                            </div>
-                            <div class="nav-item">
-                                <div class="item-icon">
-                                    <i class="flaticon-roof-2"></i>
-                                </div>
-                                <h4 class="item-title">Gutters</h4>
-                            </div>
-                            <div class="nav-item">
-                                <div class="item-icon">
-                                    <i class="flaticon-broken-house"></i>
-                                </div>
-                                <h4 class="item-title">Roof Repair</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Slider Area End Here -->
+       {% include home/slider.html %}
+       
         <!-- About Us Area Start Here -->
         <section class="about-wrap-layout2 bg-shape-2">
             <div class="container">
