added google tag manager tag

--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@ layout: default
                     <h2>Our Working Process</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-4 col-md-12">
                         <div class="service-box-layout1">
                             <div class="item-img">
-                                <img src="img/service/service1.jpg" alt="service">
+                                <img src="img/residential-flooring-services.jpg" alt="residential flooring services">
                                 <div class="sl-number">01</div>
                             </div>
                             <div class="item-content">
@@ -160,39 +160,27 @@ layout: default
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-4 col-md-12">
                         <div class="service-box-layout1">
                             <div class="item-img">
-                                <img src="img/service/service2.jpg" alt="service">
+                                <img src="img/commercial-flooring-services.jpg" alt="commercial flooring services">
                                 <div class="sl-number">02</div>
                             </div>
                             <div class="item-content">
-                                <h3 class="item-title"><a href="single-service1.html">Pick Material Color</a></h3>
-                                <p>Horem ipsum dolor sitter amete  consectetuer adiplit.</p>
+                                <h3 class="item-title"><a href="{{ site.url }}/services">Commercial</a></h3>
+                                <p>We offer flooring solutions perfect for offices, restaurants, air plane hangars, dental offices and wherever a tough great looking floor is needed.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-4 col-md-12">
                         <div class="service-box-layout1">
                             <div class="item-img">
-                                <img src="img/service/service3.jpg" alt="service">
+                                <img src="img/interior-flooring.jpg" alt="interior flooring">
                                 <div class="sl-number">03</div>
                             </div>
                             <div class="item-content">
-                                <h3 class="item-title"><a href="single-service1.html">Install New Roof</a></h3>
-                                <p>Horem ipsum dolor sitter amete  consectetuer adiplit.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="service-box-layout1">
-                            <div class="item-img">
-                                <img src="img/service/service4.jpg" alt="service">
-                                <div class="sl-number">04</div>
-                            </div>
-                            <div class="item-content">
-                                <h3 class="item-title"><a href="single-service1.html">Enjoy Peace Of Mind</a></h3>
-                                <p>Horem ipsum dolor sitter amete  consectetuer adiplit.</p>
+                                <h3 class="item-title"><a href="{{ site.url }}/services">Interior & Exterior</a></h3>
+                                <p>From driveways to skyscrappers our products and systems can provide with a durable, great looking and easy to clean flooring solution.</p>
                             </div>
                         </div>
                     </div>
