--- a/about/about.html
+++ b/about/about.html
@@ -4,8 +4,6 @@ metaTitle: About Elite Concrete Utah - Utah's Leading Concrete Company
 title: Concrete Staining Utah
 servicename: Concrete Staining
 permalink: /about/
-bg-image: ../../img/h1.png
-colorchart: ../docs/concrete-staining-utah-color-chart.pdf
 ---
         <!-- Inne Page Banner Area Start Here -->
         <section class="inner-page-banner bg-common" data-bg-image="../img/figure/breadcumb.jpg">
@@ -16,7 +14,7 @@ colorchart: ../docs/concrete-staining-utah-color-chart.pdf
                             <h1>About Us</h1>
                             <ul>
                                 <li>
-                                    <a href="index.html">Home</a>
+                                    <a href="{{ site.url }}">Home</a>
                                 </li>
                                 <li>About Us</li>
                             </ul>
@@ -263,135 +261,3 @@ colorchart: ../docs/concrete-staining-utah-color-chart.pdf
             </div>
         </section>
         <!-- Team Area End Here -->
-        <!-- Call To Action Area Start Here -->
-        <section class="action-wrap-layout1 bg-common" data-bg-image="../img/figure/banner-shape.png">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-9 col-12">
-                        <div class="action-box-layout1">
-                            <h2 class="item-title">Get Your Roofing Project Started Today!</h2>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-12 d-flex justify-content-lg-end justify-content-center">
-                        <div class="action-box-layout1">
-                           <a href="#" class="btn-fill-xl box-shadow bg-textprimary text-accent">GET A QUOTE<i class="fas fa-angle-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Call To Action Area End Here -->
-        <!-- Footer Area Start Here -->
-        <footer class="footer-wrap-layout1">
-            <div class="footer-top-wrap-layout1">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="footer-box-layout1">
-                                <div class="footer-logo">
-                                    <a href="index.html"><img src="../img/logo-light.png" alt="logo"></a>
-                                </div>
-                                <p>We always deliver 100% customer satisfaction and absolute quality 
-                                    work without any other compromis, just like we've been doing since 1982.</p>
-                                <ul class="footer-social">
-                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="footer-box-layout1">
-                                <div class="footer-title">
-                                    <h3>Quick Links</h3>
-                                </div>
-                                <div class="footer-menu-box">
-                                    <ul class="footer-menu-list">
-                                        <li>
-                                            <a href="index.html">Home</a>
-                                        </li>
-                                        <li>
-                                            <a href="about1.html">About Us</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Residential</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Commercial Roof</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Repairs</a>
-                                        </li>
-                                    </ul>
-                                    <ul class="footer-menu-list">
-                                        <li>
-                                            <a href="#">Site Map</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Maintenance</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Repairs Roofing </a>
-                                        </li>
-                                        <li>
-                                            <a href="blog1.html">Blog</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="footer-box-layout1">
-                                <div class="footer-title">
-                                    <h3>Newsletter</h3>
-                                </div>
-                                <div class="footer-form-box">
-                                    <p>Subscribe For Daily Latest News &amp; Updates</p>
-                                    <form class="contact-form-box">
-                                        <div class="row">
-                                            <div class="col-12 form-group">
-                                                <input type="email" placeholder="E-mail Address" class="form-control" name="name" data-error="Name field is required" required>
-                                                <div class="help-block with-errors"></div>
-                                            </div>
-                                            <div class="col-12 form-group">
-                                                <button type="submit" class="item-btn">Subscribe Now</button>
-                                            </div>
-                                        </div>
-                                        <div class="form-response"></div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom-wrap-layout1">
-                <div class="copyright">Copyright © 2019 Roofit by <a href="https://www.radiustheme.com/" target="_blank">RadiusTheme.</a> All Rights Reserved.</div>
-            </div>
-        </footer>
-        <!-- Footer Area End Here -->
-    </div>
-    <!-- jquery-->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <!-- Plugins js -->
-    <script src="js/plugins.js"></script>
-    <!-- Popper js -->
-    <script src="js/popper.min.js"></script>
-    <!-- Bootstrap js -->
-    <script src="js/bootstrap.min.js"></script> 
-    <!-- MeanMenu js -->
-    <script src="js/jquery.meanmenu.min.js"></script>
-    <!-- Counter Up js -->
-    <script src="js/jquery.counterup.min.js"></script> 
-    <!-- Waypoints js -->
-    <script src="js/waypoints.min.js"></script>
-    <!-- Parallax js -->
-    <script src="js/parallax.min.js"></script>
-    <!-- Main js -->
-    <script src="js/main.js"></script>
-
-</body>
-
-</html>
