--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@ layout: default
 metaTitle: 404 Error!
 title: 404 Error!
 permalink: /404/
+sitemap: false
 ---
 
         <!-- Error Page Area Start Here --> 
